Se hace limpieza en el metodo getValueByClass para con el java.sql.Time